Switched to List from LinkedList for tab complete.
Added FlyingMobs test.