@@ -1,6 +1,5 @@
 package us.tastybento.bskyblock.commands.island;
 
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -93,7 +92,7 @@ public class IslandBanCommand extends CompositeCommand {
     }
 
     @Override
-    public Optional<List<String>> tabComplete(final User user, final String alias, final LinkedList<String> args) {       
+    public Optional<List<String>> tabComplete(User user, String alias, List<String> args) {
         if (args.isEmpty()) {
             // Don't show every player on the server. Require at least the first letter
             return Optional.empty();
@@ -104,7 +103,7 @@ public class IslandBanCommand extends CompositeCommand {
                 .filter(p -> !island.isBanned(p.getUniqueId()))
                 .filter(p -> user.getPlayer().canSee(p))
                 .map(Player::getName).collect(Collectors.toList());
-        String lastArg = (!args.isEmpty() ? args.getLast() : "");
+        String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
         return Optional.of(Util.tabLimit(options, lastArg));
     }
 }
